--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         }
 
         .chat {
-            width: 375px;
-            height: 667px;
+            width: 90%;
+            max-width: 375px;
+            height: 90vh;
             border: solid 1px #EEE;
             display: flex;
             flex-direction: column;
