--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         .chat {
             width: 90%;
             max-width: 375px;
-            height: 90%;
-            max-height: 667px;
+            height: 70vh;
             border: solid 1px #EEE;
             display: flex;
             flex-direction: column;
