--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             margin: 0;
             justify-content: center;
             overflow: hidden; /* Prevent scrolling on the main page */
+            position: relative;
         }
 
         .chat {
