--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iPhone Messaging App</title>
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Prevent scrolling on the main page */
+        }
+
         body {
             font-family: Helvetica, Arial, sans-serif;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
             background-color: #f0f0f5;
-            height: 100vh;
-            margin: 0;
+        }
+
+        .site-wrapper {
+            width: 100%;
+            height: 100%;
+            display: flex;
             justify-content: center;
-            overflow: hidden; /* Prevent scrolling on the main page */
+            align-items: center;
+            overflow-x: hidden; /* Prevent horizontal scrolling */
             position: relative;
         }
 
