--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             border-bottom: 1px solid #ddd;
             width: 100%;
             border-radius: 40px 40px 0 0;
+            position: fixed;
         }
 
         .header .emoji {
